--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,13 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "googleapis": "^146.0.0",
     "nodemon": "^3.1.9",
-    "puppeteer": "^24.4.0"
+    "playwright": "^1.50.1",
+    "puppeteer": "^24.4.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
