--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "googleapis": "^146.0.0",
+    "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
     "playwright": "^1.50.1",
     "puppeteer": "^24.4.0",
